--- a/power/src/assets/fragebogen/intern-get-tasks-id.json
+++ b/power/src/assets/fragebogen/intern-get-tasks-id.json
@@ -7,6 +7,12 @@
         },
         "form-id": "bs8t7ifp9r1b3pt5qkr0",
         "id": "bs8t7ifp9r1b3pt5qkr1",
-        "published": "2020-07-17T16:37:29.338874Z"
+        "created": "2020-09-22T21:37:03.125Z",
+        "accessed": "2020-09-22T21:37:03.125Z",
+        "submitted": "2020-09-22T21:37:03.125Z",
+        "status": "created",
+        "description": "Toast",
+        "pin": "string",
+        "factor": "string"
     }
 }
