--- a/power/src/assets/fragebogen/intern-get-tasks.json
+++ b/power/src/assets/fragebogen/intern-get-tasks.json
@@ -2,19 +2,27 @@
     "data": [
         {
             "content": {},
-            "created": "2020-07-17T16:37:29.338874Z",
             "form-id": "bs8t7ifp9r1b3pt5qkr0",
             "id": "bs8t7ifp9r1b3pt5qkr0",
             "pin": "oGxOwQeS",
-            "status": "created"
+            "status": "created",
+            "factor": "string",
+            "created": "2020-09-22T22:29:36.814Z",
+            "accessed": "2020-09-22T22:29:36.814Z",
+            "submitted": "2020-09-22T22:29:36.814Z",
+            "description": "description"
         },
         {
             "content": {},
-            "created": "2020-07-17T16:37:29.845178Z",
-            "form-id": "bs8t7ifp9r1b3pt5qkrg",
-            "id": "bs8t7ifp9r1b3pt5qkrg",
-            "pin": "hxwDKjYL",
-            "status": "created"
+            "form-id": "bs8t7ifp9r1b3pt5qkr0",
+            "id": "bs8t7ifp9r1b3pt5qkr0",
+            "pin": "oGxOwQeS",
+            "status": "created",
+            "factor": "string",
+            "created": "2020-09-22T22:29:36.814Z",
+            "accessed": "2020-09-22T22:29:36.814Z",
+            "submitted": "2020-09-22T22:29:36.814Z",
+            "description": "description"
         }
     ],
     "total": 2
