--- a/chart/power/templates/ingress.yaml
+++ b/chart/power/templates/ingress.yaml
@@ -1,6 +1,7 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "power.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
+{{- $env := .Values.environment -}}
 {{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1beta1
 {{- else -}}
@@ -21,14 +22,14 @@ spec:
   {{- range .Values.ingress.tls }}
     - hosts:
       {{- range .hosts }}
-        - {{ . | quote }}
+        - "{{ $env }}.{{ . }}"
       {{- end }}
       secretName: {{ .secretName }}
   {{- end }}
 {{- end }}
   rules:
   {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
+    - host: "{{ $env }}.{{ .host }}"
       http:
         paths:
         {{- range $key, $paths := .paths }}
