--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ install:
     - npm ci
   only:
     - merge_requests
+    - tags
     - dev
     - staging
     - production
@@ -52,6 +53,7 @@ test:karma:
       - power/output/junit_karma.xml
   only:
     - merge_requests
+    - tags
     - dev
     - staging
     - production
@@ -75,6 +77,7 @@ test:e2e:
       - power/output/junit_e2e.xml
   only:
     - merge_requests
+    - tags
     - dev
     - staging
     - production
@@ -92,6 +95,7 @@ test:audit:
     - npm audit
   only:
     - merge_requests
+    - tags
     - dev
     - staging
     - production
@@ -109,6 +113,7 @@ test:lint:
     - npm run lint
   only:
     - merge_requests
+    - tags
     - dev
     - staging
     - production
@@ -126,6 +131,7 @@ test:lint:html:
     - npm run lint:html
   only:
     - merge_requests
+    - tags
     - dev
     - staging
     - production
@@ -143,6 +149,7 @@ test:lint:styles:
     - npm run lint:styles
   only:
     - merge_requests
+    - tags
     - dev
     - staging
     - production
@@ -163,6 +170,8 @@ build:
     paths:
       - power/dist/power
   only:
+    - merge_requests
+    - tags
     - dev
     - staging
     - production
@@ -222,7 +231,7 @@ deploy:production:
     - kubectl config set-credentials "$KUBE_DEPLOY_SECRET_NAME" --token="$KUBE_API_TOKEN"
     - kubectl config set-context default --cluster=k8s --user="$KUBE_DEPLOY_SECRET_NAME"
     - kubectl config use-context default
-    - helm upgrade power ./chart/power -n "$CI_COMMIT_REF_NAME" --install --set=image.tag="$CI_COMMIT_SHORT_SHA",environment="production"
+    - helm upgrade power ./chart/power -n "$CI_COMMIT_REF_NAME" --install --set=image.tag="$CI_COMMIT_SHORT_SHA",environment="production" --set replicaCount=2
   only:
     - production
   when: manual
