--- a/power/angular.json
+++ b/power/angular.json
@@ -19,7 +19,8 @@
                     "baseHref": ""
                 },
                 "locales": {
-                    "en": "src/locales/messages.en.xlf"
+                    "en": "src/locales/messages.en.xlf",
+                    "ja": "src/locales/messages.ja.xlf"
                 }
             },
             "architect": {
