Added ModuleGuard to protect routes of disabled modules

--- a/chart/power/values.yaml
+++ b/chart/power/values.yaml
@@ -82,7 +82,8 @@ affinity: {}
 config:
   modules:
     - "bodenrichtwerte"
-    - "bodenwerte"
-    - "immobilien"
-    - "fragebogen"
+    - "bodenwertkalkulator"
+    - "immobilienpreisindex"
+    - "forms"
+    - "feedback"
   authentication: true
