--- a/power/src/assets/config/config.json
+++ b/power/src/assets/config/config.json
@@ -1,9 +1,10 @@
 {
     "modules": [
         "bodenrichtwerte",
-        "bodenwerte",
-        "immobilien",
-        "fragebogen"
+        "bodenwertkalkulator",
+        "immobilienpreisindex",
+        "forms",
+        "feedback"
     ],
     "authentication": true
 }
