--- a/nginx-default.conf.template
+++ b/nginx-default.conf.template
@@ -7,15 +7,15 @@ server {
   server_tokens off;
 
   # security headers
-  #proxy_cookie_path / "/; HTTPOnly; Secure";
-  #add_header Strict-Transport-Security "max-age=63072000; includeSubdomains;" always;
+  proxy_cookie_path / "/; HTTPOnly; Secure";
+  add_header Strict-Transport-Security "max-age=31536000; includeSubdomains;" always;
   #add_header Content-Security-Policy "default-src 'none'; script-src 'self' 'unsafe-eval'; style-src 'unsafe-inline' 'self'; img-src 'self' https: data:; font-src 'self'; media-src 'self'; connect-src 'self'; form-action 'self'; frame-ancestors 'self'; base-uri 'self';" always;
   add_header X-Frame-Options SAMEORIGIN always;
   add_header X-XSS-Protection "1; mode=block" always;
   add_header X-Content-Type-Options "nosniff" always;
   add_header Access-Control-Allow-Origin "*" always;
   add_header Referrer-Policy "same-origin" always;
-  #add_header Expect-CT "max-age=86400, enforce" always;
+  add_header Expect-CT "max-age=86400, enforce" always;
 
   # disable cache
   add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
