Updated japanese language, added france language

--- a/power/angular.json
+++ b/power/angular.json
@@ -20,7 +20,8 @@
                 },
                 "locales": {
                     "en": "src/locales/messages.en.xlf",
-                    "ja": "src/locales/messages.ja.xlf"
+                    "ja": "src/locales/messages.ja.xlf",
+                    "fr": "src/locales/messages.fr.xlf"
                 }
             },
             "architect": {
