--- a/power/ngsw-config.json
+++ b/power/ngsw-config.json
@@ -20,7 +20,7 @@
             "resources": {
                 "files": [
                     "/assets/**",
-                    "!/assets/config.json",
+                    "!/assets/config/config.json",
                     "/mvt/**"
                 ]
             }
