--- a/power/package.json
+++ b/power/package.json
@@ -17,22 +17,22 @@
     "dependencies": {
         "@angular-devkit/core": "^10.2.0",
         "@angular-devkit/schematics": "^10.2.0",
-        "@angular/animations": "^10.2.2",
+        "@angular/animations": "^10.2.3",
         "@angular/cdk": "^10.2.7",
-        "@angular/common": "^10.2.2",
-        "@angular/compiler": "^10.2.2",
-        "@angular/core": "^10.2.2",
-        "@angular/forms": "^10.2.2",
-        "@angular/localize": "^10.2.2",
-        "@angular/platform-browser": "^10.2.2",
-        "@angular/platform-browser-dynamic": "^10.2.2",
-        "@angular/router": "^10.2.2",
-        "@angular/service-worker": "^10.2.2",
+        "@angular/common": "^10.2.3",
+        "@angular/compiler": "^10.2.3",
+        "@angular/core": "^10.2.3",
+        "@angular/forms": "^10.2.3",
+        "@angular/localize": "^10.2.3",
+        "@angular/platform-browser": "^10.2.3",
+        "@angular/platform-browser-dynamic": "^10.2.3",
+        "@angular/router": "^10.2.3",
+        "@angular/service-worker": "^10.2.3",
         "@ng-bootstrap/ng-bootstrap": "^7.0.0",
         "bootstrap": "^4.5.3",
         "bootstrap-icons": "^1.1.0",
         "classlist.js": "^1.1.20150312",
-        "core-js": "^3.6.5",
+        "core-js": "^3.7.0",
         "echarts": "^4.9.0",
         "fast-xml-parser": "^3.17.4",
         "geojson": "^0.5.0",
@@ -41,7 +41,7 @@
         "mapbox-gl": "^1.12.0",
         "ngx-bootstrap": "^6.1.0",
         "ngx-bootstrap-icons": "^1.2.1",
-        "ngx-echarts": "^5.1.2",
+        "ngx-echarts": "^5.2.1",
         "ngx-mapbox-gl": "^4.8.1",
         "ngx-showdown": "^6.0.0",
         "ngx-smooth-dnd": "^0.4.1",
@@ -51,7 +51,7 @@
         "rxjs-compat": "^6.6.3",
         "semver": "^7.3.2",
         "showdown": "^1.9.1",
-        "survey-angular": "^1.8.12",
+        "survey-angular": "^1.8.13",
         "tslib": "^2.0.3",
         "web-animations-js": "^2.3.2",
         "zone.js": "^0.10.3"
@@ -59,13 +59,13 @@
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.1002.0",
         "@angular/cli": "^10.2.0",
-        "@angular/compiler-cli": "^10.2.2",
-        "@angular/language-service": "^10.2.2",
+        "@angular/compiler-cli": "^10.2.3",
+        "@angular/language-service": "^10.2.3",
         "@types/geojson": "^7946.0.7",
         "@types/jasmine": "^3.6.1",
         "@types/jasminewd2": "^2.0.8",
         "@types/mapbox-gl": "^1.12.5",
-        "@types/node": "^14.14.6",
+        "@types/node": "^14.14.7",
         "@types/showdown": "^1.9.3",
         "codelyzer": "^6.0.1",
         "html-validate": "^3.5.0",
@@ -79,6 +79,7 @@
         "karma-jasmine-html-reporter": "^1.5.0",
         "karma-junit-reporter": "^2.0.1",
         "protractor": "^7.0.0",
+        "resize-observer-polyfill": "^1.5.1",
         "stylelint": "^13.7.2",
         "stylelint-config-standard": "^20.0.0",
         "ts-node": "^9.0.0",
