--- a/power/package.json
+++ b/power/package.json
@@ -28,7 +28,7 @@
         "@angular/platform-browser-dynamic": "^11.0.0",
         "@angular/router": "^11.0.0",
         "@angular/service-worker": "^11.0.0",
-        "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+        "@ng-bootstrap/ng-bootstrap": "^8.0.0",
         "bootstrap": "^4.5.3",
         "bootstrap-icons": "^1.1.0",
         "classlist.js": "^1.1.20150312",
@@ -45,16 +45,16 @@
         "ngx-mapbox-gl": "^4.8.1",
         "ngx-showdown": "^6.0.0",
         "ngx-smooth-dnd": "^0.4.1",
-        "node-sass": "^4.14.1",
         "nouislider": "^14.6.2",
         "rxjs": "^6.6.3",
         "rxjs-compat": "^6.6.3",
+        "sass": "^1.29.0",
         "semver": "^7.3.2",
         "showdown": "^1.9.1",
         "survey-angular": "^1.8.13",
         "tslib": "^2.0.3",
         "web-animations-js": "^2.3.2",
-        "zone.js": "^0.10.3"
+        "zone.js": "^0.11.3"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.1100.0",
@@ -68,7 +68,7 @@
         "@types/node": "^14.14.7",
         "@types/showdown": "^1.9.3",
         "codelyzer": "^6.0.1",
-        "html-validate": "^3.5.0",
+        "html-validate": "^4.0.1",
         "jasmine-core": "^3.6.0",
         "jasmine-reporters": "^2.3.2",
         "jasmine-spec-reporter": "^6.0.0",
