--- a/power/angular.json
+++ b/power/angular.json
@@ -1,196 +1,193 @@
 {
-    "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-    "version": 1,
-    "newProjectRoot": "projects",
-    "projects": {
-        "power": {
-            "root": "",
-            "sourceRoot": "src",
-            "projectType": "application",
-            "prefix": "power",
-            "schematics": {
-                "@schematics/angular:component": {
-                    "style": "scss"
-                }
-            },
-            "i18n": {
-                "sourceLocale": {
-                    "code": "de",
-                    "baseHref": ""
-                },
-                "locales": {
-                    "en": "src/locales/messages.en.xlf",
-                    "ja": "src/locales/messages.ja.xlf",
-                    "fr": "src/locales/messages.fr.xlf"
-                }
-            },
-            "architect": {
-                "build": {
-                    "builder": "@angular-devkit/build-angular:browser",
-                    "options": {
-                        "localize": true,
-                        "aot": true,
-                        "outputPath": "dist/power",
-                        "index": "src/index.html",
-                        "main": "src/main.ts",
-                        "polyfills": "src/polyfills.ts",
-                        "tsConfig": "src/tsconfig.app.json",
-                        "assets": [
-                            "src/favicon.ico",
-                            "src/assets",
-                            "src/manifest.json",
-                            "src/robots.txt"
-                        ],
-                        "styles": [
-                            "src/styles.scss"
-                        ],
-                        "scripts": [],
-                        "allowedCommonJsDependencies": [
-                            "bootstrap-slider",
-                            "css-element-queries",
-                            "echarts",
-                            "hyphen",
-                            "inputmask",
-                            "nouislider",
-                            "showdown",
-                            "suggestions",
-                            "surveyjs-widgets",
-                            "zrender",
-                            "@mapbox/mapbox-gl-geocoder",
-                            "@mapbox/mapbox-sdk"
-                        ]
-                    },
-                    "configurations": {
-                        "production": {
-                            "budgets": [
-                                {
-                                    "type": "anyComponentStyle",
-                                    "maximumWarning": "6kb"
-                                },
-                                {
-                                    "type": "bundle",
-                                    "name": "main",
-                                    "maximumWarning": "768kb",
-                                    "maximumError": "1024kb"
-                                }
-                            ],
-                            "fileReplacements": [
-                                {
-                                    "replace": "src/environments/environment.ts",
-                                    "with": "src/environments/environment.prod.ts"
-                                }
-                            ],
-                            "optimization": true,
-                            "outputHashing": "none",
-                            "sourceMap": false,
-                            "extractCss": true,
-                            "namedChunks": false,
-                            "aot": true,
-                            "extractLicenses": true,
-                            "vendorChunk": false,
-                            "buildOptimizer": true,
-                            "serviceWorker": true
-                        },
-                        "de": {
-                            "localize": [
-                                "de"
-                            ],
-                            "baseHref": "/"
-                        },
-                        "en": {
-                            "localize": [
-                                "en"
-                            ],
-                            "baseHref": "/"
-                        }
-                    }
-                },
-                "serve": {
-                    "builder": "@angular-devkit/build-angular:dev-server",
-                    "options": {
-                        "browserTarget": "power:build:de",
-                        "proxyConfig": "proxy.conf.json",
-                        "host": "0.0.0.0",
-                        "disableHostCheck": true
-                    },
-                    "configurations": {
-                        "production": {
-                            "browserTarget": "power:build:production,de"
-                        },
-                        "de": {
-                            "browserTarget": "power:build:de"
-                        },
-                        "en": {
-                            "browserTarget": "power:build:en"
-                        }
-                    }
-                },
-                "extract-i18n": {
-                    "builder": "@angular-devkit/build-angular:extract-i18n",
-                    "options": {
-                        "browserTarget": "power:build"
-                    }
-                },
-                "test": {
-                    "builder": "@angular-devkit/build-angular:karma",
-                    "options": {
-                        "main": "src/test.ts",
-                        "polyfills": "src/polyfills.ts",
-                        "tsConfig": "src/tsconfig.spec.json",
-                        "sourceMap": true,
-                        "karmaConfig": "src/karma.conf.js",
-                        "styles": [
-                            "src/styles.scss"
-                        ],
-                        "scripts": [],
-                        "assets": [
-                            "src/favicon.ico",
-                            "src/assets",
-                            "src/manifest.json"
-                        ]
-                    }
-                },
-                "lint": {
-                    "builder": "@angular-devkit/build-angular:tslint",
-                    "options": {
-                        "tsConfig": [
-                            "src/tsconfig.app.json",
-                            "src/tsconfig.spec.json"
-                        ],
-                        "exclude": [
-                            "**/node_modules/**"
-                        ]
-                    }
-                }
-            }
-        },
-        "power-e2e": {
-            "root": "e2e/",
-            "projectType": "application",
-            "architect": {
-                "e2e": {
-                    "builder": "@angular-devkit/build-angular:protractor",
-                    "options": {
-                        "protractorConfig": "e2e/protractor.conf.js",
-                        "devServerTarget": "power:serve"
-                    },
-                    "configurations": {
-                        "production": {
-                            "devServerTarget": "power:serve:production"
-                        }
-                    }
-                },
-                "lint": {
-                    "builder": "@angular-devkit/build-angular:tslint",
-                    "options": {
-                        "tsConfig": "e2e/tsconfig.e2e.json",
-                        "exclude": [
-                            "**/node_modules/**"
-                        ]
-                    }
-                }
-            }
+  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "version": 1,
+  "newProjectRoot": "projects",
+  "projects": {
+    "power": {
+      "root": "",
+      "sourceRoot": "src",
+      "projectType": "application",
+      "prefix": "power",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
         }
+      },
+      "i18n": {
+        "sourceLocale": {
+          "code": "de",
+          "baseHref": ""
+        },
+        "locales": {
+          "en": "src/locales/messages.en.xlf",
+          "ja": "src/locales/messages.ja.xlf",
+          "fr": "src/locales/messages.fr.xlf"
+        }
+      },
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "localize": true,
+            "aot": true,
+            "outputPath": "dist/power",
+            "index": "src/index.html",
+            "main": "src/main.ts",
+            "polyfills": "src/polyfills.ts",
+            "tsConfig": "src/tsconfig.app.json",
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/manifest.json",
+              "src/robots.txt"
+            ],
+            "styles": [
+              "src/styles.scss"
+            ],
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "bootstrap-slider",
+              "css-element-queries",
+              "echarts",
+              "hyphen",
+              "inputmask",
+              "nouislider",
+              "showdown",
+              "suggestions",
+              "surveyjs-widgets",
+              "zrender",
+              "@mapbox/mapbox-gl-geocoder",
+              "@mapbox/mapbox-sdk"
+            ]
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                },
+                {
+                  "type": "bundle",
+                  "name": "main",
+                  "maximumWarning": "768kb",
+                  "maximumError": "1024kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "none",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "serviceWorker": true
+            },
+            "de": {
+              "localize": [
+                "de"
+              ],
+              "baseHref": "/"
+            },
+            "en": {
+              "localize": [
+                "en"
+              ],
+              "baseHref": "/"
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "power:build:de",
+            "proxyConfig": "proxy.conf.json",
+            "host": "0.0.0.0",
+            "disableHostCheck": true
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "power:build:production,de"
+            },
+            "de": {
+              "browserTarget": "power:build:de"
+            },
+            "en": {
+              "browserTarget": "power:build:en"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "power:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "src/test.ts",
+            "polyfills": "src/polyfills.ts",
+            "tsConfig": "src/tsconfig.spec.json",
+            "sourceMap": true,
+            "karmaConfig": "src/karma.conf.js",
+            "styles": [
+              "src/styles.scss"
+            ],
+            "scripts": [],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/manifest.json"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
+        }
+      }
     },
-    "defaultProject": "power"
+    "power-e2e": {
+      "root": "e2e/",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "e2e/protractor.conf.js",
+            "devServerTarget": "power:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "power:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
+  "defaultProject": "power"
 }
