--- a/nginx-default.conf.template
+++ b/nginx-default.conf.template
@@ -14,7 +14,7 @@ server {
   add_header Access-Control-Allow-Origin "*" always;
   add_header Referrer-Policy "strict-origin" always;
   add_header Expect-CT "max-age=86400, enforce" always;
-  add_header Permissions-Policy "geolocation=(self)" always;
+  add_header Permissions-Policy "geolocation=(self),camera=(),microphone=(),usb=(),payment=(),fullscreen=()" always;
   add_header X-Frame-Options "DENY" always;
   add_header X-XSS-Protection "1; mode=block" always;
 
