--- a/power/package.json
+++ b/power/package.json
@@ -69,7 +69,7 @@
         "@types/geojson": "^7946.0.7",
         "@types/jasmine": "^3.6.1",
         "@types/jasminewd2": "^2.0.8",
-        "@types/mapbox-gl": "^1.12.8",
+        "@types/mapbox-gl": "1.12.7",
         "@types/node": "^14.14.8",
         "@types/showdown": "^1.9.3",
         "@typescript-eslint/eslint-plugin": "^4.8.1",
