--- a/power/.eslintrc.json
+++ b/power/.eslintrc.json
@@ -42,7 +42,8 @@
                 "max-len": [
                     "error",
                     {
-                        "code": 120
+                        "code": 120,
+                        "ignoreUrls": true
                     }
                 ],
                 "max-lines": [
