--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ cache: &global_cache
 
 install:
   stage: init
-  image: node:alpine
+  image: node:lts-alpine
   dependencies: []
   cache:
     <<: *global_cache
@@ -85,7 +85,7 @@ test:e2e:
 
 test:audit:
   stage: test
-  image: node:alpine
+  image: node:lts-alpine
   dependencies: []
   cache:
     <<: *global_cache
@@ -102,7 +102,7 @@ test:audit:
 
 test:lint:
   stage: test
-  image: node:alpine
+  image: node:lts-alpine
   dependencies: []
   cache:
     <<: *global_cache
@@ -119,7 +119,7 @@ test:lint:
 
 test:lint:html:
   stage: test
-  image: node:alpine
+  image: node:lts-alpine
   dependencies: []
   cache:
     <<: *global_cache
@@ -136,7 +136,7 @@ test:lint:html:
 
 test:lint:styles:
   stage: test
-  image: node:alpine
+  image: node:lts-alpine
   dependencies: []
   cache:
     <<: *global_cache
@@ -153,7 +153,7 @@ test:lint:styles:
 
 build:
   stage: build
-  image: node:alpine
+  image: node:lts-alpine
   dependencies: []
   cache:
     <<: *global_cache
