--- a/power/package.json
+++ b/power/package.json
@@ -38,7 +38,7 @@
         "geojson": "^0.5.0",
         "hyphen": "^1.6.2",
         "knockout": "^3.5.1",
-        "mapbox-gl": "^1.12.0",
+        "mapbox-gl": "^1.13.0",
         "ngx-bootstrap": "^6.2.0",
         "ngx-bootstrap-icons": "^1.2.3",
         "ngx-echarts": "^5.2.1",
@@ -58,11 +58,11 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.1100.2",
-        "@angular-eslint/builder": "^0.8.0-beta.1",
-        "@angular-eslint/eslint-plugin": "^0.8.0-beta.1",
-        "@angular-eslint/eslint-plugin-template": "^0.8.0-beta.1",
-        "@angular-eslint/schematics": "^0.8.0-beta.1",
-        "@angular-eslint/template-parser": "^0.8.0-beta.1",
+        "@angular-eslint/builder": "^0.8.0-beta.2",
+        "@angular-eslint/eslint-plugin": "^0.8.0-beta.2",
+        "@angular-eslint/eslint-plugin-template": "^0.8.0-beta.2",
+        "@angular-eslint/schematics": "^0.8.0-beta.2",
+        "@angular-eslint/template-parser": "^0.8.0-beta.2",
         "@angular/cli": "^11.0.2",
         "@angular/compiler-cli": "^11.0.2",
         "@angular/language-service": "^11.0.2",
@@ -75,7 +75,7 @@
         "@typescript-eslint/eslint-plugin": "^4.8.1",
         "@typescript-eslint/parser": "^4.8.1",
         "codelyzer": "^6.0.1",
-        "eslint": "^7.6.0",
+        "eslint": "^7.14.0",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jsdoc": "^30.7.8",
         "eslint-plugin-prefer-arrow": "^1.2.2",
@@ -94,6 +94,6 @@
         "stylelint": "^13.8.0",
         "stylelint-config-standard": "^20.0.0",
         "ts-node": "^9.0.0",
-        "typescript": "^4.0.5"
+        "typescript": "~4.0.5"
     }
 }
