--- a/nginx-default.conf.template
+++ b/nginx-default.conf.template
@@ -50,4 +50,12 @@ server {
     return 404;
   }
 
+  location /wfs/ {
+    rewrite ^\/doorman\/auth\/WFS_NI_1311_ALKIS-NAS-konform\/(.*);
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_pass https://https://www.geobasisdaten.niedersachsen.de/;
+    proxy_set_header Authorization "Basic ${WFS_BASIC_AUTH_SECRET}";
+    return 404;
+  }
 }
