--- a/power/package.json
+++ b/power/package.json
@@ -69,6 +69,7 @@
         "@types/geojson": "^7946.0.7",
         "@types/jasmine": "^3.6.2",
         "@types/jasminewd2": "^2.0.8",
+        "@types/lodash": "^4.14.165",
         "@types/mapbox-gl": "1.12.7",
         "@types/node": "^14.14.9",
         "@types/showdown": "^1.9.3",
