--- a/power/package.json
+++ b/power/package.json
@@ -34,6 +34,7 @@
         "classlist.js": "^1.1.20150312",
         "core-js": "^3.7.0",
         "echarts": "^4.9.0",
+        "epsg": "^0.5.0",
         "fast-xml-parser": "^3.17.4",
         "geojson": "^0.5.0",
         "hyphen": "^1.6.2",
@@ -46,6 +47,7 @@
         "ngx-showdown": "^6.0.0",
         "ngx-smooth-dnd": "^0.4.1",
         "nouislider": "^14.6.3",
+        "proj4": "^2.6.3",
         "rxjs": "^6.6.3",
         "rxjs-compat": "^6.6.3",
         "sass": "^1.29.0",
