--- a/power/package.json
+++ b/power/package.json
@@ -18,7 +18,7 @@
         "@angular-devkit/core": "^11.0.2",
         "@angular-devkit/schematics": "^11.0.2",
         "@angular/animations": "^11.0.2",
-        "@angular/cdk": "^11.0.0",
+        "@angular/cdk": "^11.0.1",
         "@angular/common": "^11.0.2",
         "@angular/compiler": "^11.0.2",
         "@angular/core": "^11.0.2",
@@ -32,7 +32,7 @@
         "bootstrap": "^4.5.3",
         "bootstrap-icons": "^1.1.0",
         "classlist.js": "^1.1.20150312",
-        "core-js": "^3.7.0",
+        "core-js": "^3.8.0",
         "echarts": "^4.9.0",
         "epsg": "^0.5.0",
         "fast-xml-parser": "^3.17.4",
@@ -53,18 +53,18 @@
         "sass": "^1.29.0",
         "semver": "^7.3.2",
         "showdown": "^1.9.1",
-        "survey-angular": "^1.8.14",
+        "survey-angular": "^1.8.17",
         "tslib": "^2.0.3",
         "web-animations-js": "^2.3.2",
         "zone.js": "^0.11.3"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.1100.2",
-        "@angular-eslint/builder": "^0.8.0-beta.2",
-        "@angular-eslint/eslint-plugin": "^0.8.0-beta.2",
-        "@angular-eslint/eslint-plugin-template": "^0.8.0-beta.2",
-        "@angular-eslint/schematics": "^0.8.0-beta.2",
-        "@angular-eslint/template-parser": "^0.8.0-beta.2",
+        "@angular-eslint/builder": "^0.8.0-beta.3",
+        "@angular-eslint/eslint-plugin": "^0.8.0-beta.3",
+        "@angular-eslint/eslint-plugin-template": "^0.8.0-beta.3",
+        "@angular-eslint/schematics": "^0.8.0-beta.3",
+        "@angular-eslint/template-parser": "^0.8.0-beta.3",
         "@angular/cli": "^11.0.2",
         "@angular/compiler-cli": "^11.0.2",
         "@angular/language-service": "^11.0.2",
@@ -73,10 +73,10 @@
         "@types/jasminewd2": "^2.0.8",
         "@types/lodash": "^4.14.165",
         "@types/mapbox-gl": "1.12.7",
-        "@types/node": "^14.14.9",
+        "@types/node": "^14.14.10",
         "@types/showdown": "^1.9.3",
-        "@typescript-eslint/eslint-plugin": "^4.8.1",
-        "@typescript-eslint/parser": "^4.8.1",
+        "@typescript-eslint/eslint-plugin": "^4.8.2",
+        "@typescript-eslint/parser": "^4.8.2",
         "codelyzer": "^6.0.1",
         "eslint": "^7.14.0",
         "eslint-plugin-import": "^2.22.1",
@@ -97,6 +97,6 @@
         "stylelint": "^13.8.0",
         "stylelint-config-standard": "^20.0.0",
         "ts-node": "^9.0.0",
-        "typescript": "~4.0.5"
+        "typescript": "4.0.5"
     }
 }
