--- a/power/package.json
+++ b/power/package.json
@@ -53,7 +53,7 @@
         "sass": "^1.29.0",
         "semver": "^7.3.2",
         "showdown": "^1.9.1",
-        "survey-angular": "^1.8.17",
+        "survey-angular": "^1.8.18",
         "tslib": "^2.0.3",
         "web-animations-js": "^2.3.2",
         "zone.js": "^0.11.3"
@@ -75,8 +75,8 @@
         "@types/mapbox-gl": "1.12.7",
         "@types/node": "^14.14.10",
         "@types/showdown": "^1.9.3",
-        "@typescript-eslint/eslint-plugin": "^4.8.2",
-        "@typescript-eslint/parser": "^4.8.2",
+        "@typescript-eslint/eslint-plugin": "^4.9.0",
+        "@typescript-eslint/parser": "^4.9.0",
         "codelyzer": "^6.0.1",
         "eslint": "^7.14.0",
         "eslint-plugin-import": "^2.22.1",
@@ -97,6 +97,6 @@
         "stylelint": "^13.8.0",
         "stylelint-config-standard": "^20.0.0",
         "ts-node": "^9.0.0",
-        "typescript": "4.0.5"
+        "typescript": "~4.0.5"
     }
 }
