--- a/power/src/manifest.json
+++ b/power/src/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Portal für wertermittlungsinformationen",
-    "short_name": "POWER",
+    "name": "Portal für Wertermittlung Niedersachsen",
+    "short_name": "POWER.NI",
     "theme_color": "#1976d2",
     "background_color": "#fafafa",
     "display": "standalone",
