--- a/power/package.json
+++ b/power/package.json
@@ -1,7 +1,7 @@
 {
     "name": "power",
-    "version": "0.1.13",
-    "description": "Portal für Wertermittlungsinformationen",
+    "version": "0.2.0",
+    "description": "Portal für Wertermittlung Niedersachsen",
     "author": "Landesamt für Geoinformation und Landesvermessung Niedersachsen",
     "scripts": {
         "ng": "ng",
@@ -18,7 +18,7 @@
         "@angular-devkit/core": "^11.0.3",
         "@angular-devkit/schematics": "^11.0.3",
         "@angular/animations": "^11.0.3",
-        "@angular/cdk": "^11.0.1",
+        "@angular/cdk": "^11.0.2",
         "@angular/common": "^11.0.3",
         "@angular/compiler": "^11.0.3",
         "@angular/core": "^11.0.3",
@@ -32,7 +32,7 @@
         "bootstrap": "^4.5.3",
         "bootstrap-icons": "^1.1.0",
         "classlist.js": "^1.1.20150312",
-        "core-js": "^3.8.0",
+        "core-js": "^3.8.1",
         "echarts": "^4.9.0",
         "epsg": "^0.5.0",
         "fast-xml-parser": "^3.17.5",
@@ -50,10 +50,10 @@
         "proj4": "^2.6.3",
         "rxjs": "^6.6.3",
         "rxjs-compat": "^6.6.3",
-        "sass": "^1.29.0",
+        "sass": "^1.30.0",
         "semver": "^7.3.4",
         "showdown": "^1.9.1",
-        "survey-angular": "^1.8.18",
+        "survey-angular": "^1.8.19",
         "tslib": "^2.0.3",
         "web-animations-js": "^2.3.2",
         "zone.js": "^0.11.3"
@@ -75,10 +75,10 @@
         "@types/mapbox-gl": "1.12.7",
         "@types/node": "^14.14.10",
         "@types/showdown": "^1.9.3",
-        "@typescript-eslint/eslint-plugin": "^4.9.0",
-        "@typescript-eslint/parser": "^4.9.0",
+        "@typescript-eslint/eslint-plugin": "^4.9.1",
+        "@typescript-eslint/parser": "^4.9.1",
         "codelyzer": "^6.0.1",
-        "eslint": "^7.14.0",
+        "eslint": "^7.15.0",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jsdoc": "^30.7.8",
         "eslint-plugin-prefer-arrow": "^1.2.2",
@@ -96,7 +96,7 @@
         "resize-observer-polyfill": "^1.5.1",
         "stylelint": "^13.8.0",
         "stylelint-config-standard": "^20.0.0",
-        "ts-node": "^9.1.0",
+        "ts-node": "^9.1.1",
         "typescript": "~4.0.5"
     }
 }
