--- a/power/.eslintrc.json
+++ b/power/.eslintrc.json
@@ -18,7 +18,8 @@
             "extends": [
                 "plugin:@angular-eslint/ng-cli-compat",
                 "plugin:@angular-eslint/ng-cli-compat--formatting-add-on",
-                "plugin:@angular-eslint/template/process-inline-templates"
+                "plugin:@angular-eslint/template/process-inline-templates",
+                "plugin:security/recommended"
             ],
             "rules": {
                 "arrow-body-style": "error",
@@ -77,7 +78,9 @@
                 "@typescript-eslint/dot-notation": "off",
                 "@typescript-eslint/member-ordering": "off",
                 "@typescript-eslint/naming-convention": "off",
-                "@typescript-eslint/prefer-for-of": "off"
+                "@typescript-eslint/prefer-for-of": "off",
+                "security/detect-object-injection": "off",
+                "security/detect-non-literal-fs-filename": "off"
             }
         },
         {
