--- a/nginx-default.conf.template
+++ b/nginx-default.conf.template
@@ -11,7 +11,7 @@ server {
   # security headers
   proxy_cookie_path / "/; HTTPOnly; Secure";
   add_header Strict-Transport-Security "max-age=31536000; includeSubdomains;" always;
-  add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval'; worker-src 'self' blob:; style-src 'unsafe-inline' 'self'; img-src 'self' https: data:; object-src 'none'; connect-src *;" always;
+  add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval'; worker-src 'self' blob:; child-src 'self' blob:; style-src 'unsafe-inline' 'self'; img-src 'self' https: data:; object-src 'none'; connect-src *;" always;
   add_header X-Content-Type-Options "nosniff" always;
   add_header Access-Control-Allow-Origin "*" always;
   add_header Referrer-Policy "strict-origin" always;
