--- a/chart/power/values.yaml
+++ b/chart/power/values.yaml
@@ -95,6 +95,7 @@ config:
     - "bodenrichtwerte"
     - "bodenwertkalkulator"
     - "immobilienpreisindex"
+    - "immobilienpreiskalkulator"
     - "forms"
     - "feedback"
   authentication: true
