--- a/power/src/assets/config/config.json
+++ b/power/src/assets/config/config.json
@@ -3,6 +3,7 @@
         "bodenrichtwerte",
         "bodenwertkalkulator",
         "immobilienpreisindex",
+        "immobilienpreiskalkulator",
         "forms",
         "feedback"
     ],
