--- a/nginx-default.conf.template
+++ b/nginx-default.conf.template
@@ -2,11 +2,12 @@
 
 server {
   listen  80;
+  root /usr/share/nginx/html;
+  server_tokens off;
   gzip on;
   gzip_types application/javascript application/json application/octet-stream image/x-icon text/css text/html;
-  server_tokens off;
-  
-  error_log /var/log/nginx/error.log debug;
+
+  error_log /var/log/nginx/error.log warn;
 
   # security headers
   proxy_cookie_path / "/; HTTPOnly; Secure";
@@ -20,15 +21,18 @@ server {
   add_header X-Frame-Options "DENY" always;
   add_header X-XSS-Protection "1; mode=block" always;
 
-  # disable cache
-  add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-  if_modified_since off;
-  expires off;
-  etag off;
-
   location / {
-    root  /usr/share/nginx/html;
-    try_files $uri $uri/ /index.html;
+    gzip_static on;
+    index do-not-use-me.html;
+    try_files $uri @index;
+  }
+
+  location @index {
+    # disable cache
+    add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+    add_header Pragma 'no-cache';
+    expires 0;
+    try_files /index.html =404;
   }
 
   location /health {
@@ -61,7 +65,7 @@ server {
   location /feedback-rss/ {
     rewrite ^\/feedback-rss\/(.*) /Kay-LGLN/power/-/issues.atom break;
     proxy_set_header X-Real-IP $remote_addr;
-	proxy_ssl_server_name on;
+    proxy_ssl_server_name on;
     proxy_pass https://gitlab.com/;
     return 404;
   }
