--- a/chart/power/values-staging.yaml
+++ b/chart/power/values-staging.yaml
@@ -38,9 +38,6 @@ service:
   type: ClusterIP
   port: 80
 
-# Deployment environment, default dev
-environment: dev
-
 ingress:
   enabled: true
   annotations:
@@ -48,7 +45,7 @@ ingress:
     konghq.com/override: power-https-redirect
     konghq.com/plugins: power-rate-limiting-by-ip,power-cors
   hosts:
-    - host: power-cluster-65655d4c73bf47a3300821aa2939abf4-0001.eu-de.containers.appdomain.cloud
+    - host: staging.power-cluster-65655d4c73bf47a3300821aa2939abf4-0001.eu-de.containers.appdomain.cloud
       paths:
       - path: /
         serviceName: power
@@ -56,7 +53,7 @@ ingress:
       - path: /geoserver/
         serviceName: presentation-geoserver
         servicePort: 8080
-    - host: power.niedersachsen.dev
+    - host: staging.power.niedersachsen.dev
       paths:
       - path: /
         serviceName: power
@@ -67,10 +64,10 @@ ingress:
   tls:
    - secretName: power-cluster-65655d4c73bf47a3300821aa2939abf4-0001
      hosts:
-       - power-cluster-65655d4c73bf47a3300821aa2939abf4-0001.eu-de.containers.appdomain.cloud
+       - staging.power-cluster-65655d4c73bf47a3300821aa2939abf4-0001.eu-de.containers.appdomain.cloud
    - secretName: power-niedersachsen-dev
      hosts:
-       - power.niedersachsen.dev
+       - staging.power.niedersachsen.dev
 
 resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
