--- a/power/angular.json
+++ b/power/angular.json
@@ -88,6 +88,35 @@
                             "buildOptimizer": true,
                             "serviceWorker": true
                         },
+                        "staging": {
+                            "budgets": [
+                                {
+                                    "type": "anyComponentStyle",
+                                    "maximumWarning": "6kb"
+                                },
+                                {
+                                    "type": "bundle",
+                                    "name": "main",
+                                    "maximumWarning": "768kb",
+                                    "maximumError": "1024kb"
+                                }
+                            ],
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.staging.ts"
+                                }
+                            ],
+                            "optimization": true,
+                            "outputHashing": "all",
+                            "sourceMap": false,
+                            "namedChunks": false,
+                            "aot": true,
+                            "extractLicenses": true,
+                            "vendorChunk": false,
+                            "buildOptimizer": true,
+                            "serviceWorker": true
+                        },
                         "de": {
                             "localize": [
                                 "de"
@@ -113,6 +142,9 @@
                     "configurations": {
                         "production": {
                             "browserTarget": "power:build:production,de"
+                        },
+                        "staging": {
+                            "browserTarget": "power:build:staging,de"
                         },
                         "de": {
                             "browserTarget": "power:build:de"
@@ -171,6 +203,9 @@
                     "configurations": {
                         "production": {
                             "devServerTarget": "power:serve:production"
+                        },
+                        "staging": {
+                            "devServerTarget": "power:serve:staging"
                         }
                     }
                 },
