update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "html.format.indentHandlebars": true,
     "html.format.wrapAttributes": "force-aligned",
     "editor.formatOnSave": true,
-    "eslint.format.enable": true
+    "eslint.format.enable": true,
+    "eslint.workingDirectories": [
+        "power"
+    ]
 }
