--- a/power/package.json
+++ b/power/package.json
@@ -1,6 +1,6 @@
 {
     "name": "power",
-    "version": "0.2.0",
+    "version": "0.2.1",
     "description": "Portal für Wertermittlung Niedersachsen",
     "author": "Landesamt für Geoinformation und Landesvermessung Niedersachsen",
     "scripts": {
@@ -27,6 +27,7 @@
         "@angular/platform-browser": "^11.1.1",
         "@angular/platform-browser-dynamic": "^11.1.1",
         "@angular/router": "^11.1.1",
+        "@angular/service-worker": "^11.1.1",
         "@ng-bootstrap/ng-bootstrap": "^9.0.2",
         "@turf/turf": "^6.3.0",
         "bootstrap": "^4.6.0",
@@ -69,6 +70,7 @@
         "@angular/cli": "^11.1.2",
         "@angular/compiler-cli": "^11.1.1",
         "@angular/language-service": "^11.1.1",
+        "@schematics/angular": "^11.1.2",
         "@types/geojson": "^7946.0.7",
         "@types/jasmine": "^3.6.3",
         "@types/jasminewd2": "^2.0.8",
@@ -79,13 +81,13 @@
         "@typescript-eslint/eslint-plugin": "^4.14.1",
         "@typescript-eslint/parser": "^4.14.1",
         "codelyzer": "^6.0.1",
-        "eslint": "^7.18.0",
+        "eslint": "^7.19.0",
         "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jsdoc": "^31.4.0",
+        "eslint-plugin-jsdoc": "^31.6.0",
         "eslint-plugin-no-unsanitized": "^3.1.4",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-scanjs-rules": "^0.2.1",
-        "html-validate": "^4.3.0",
+        "html-validate": "^4.4.0",
         "jasmine-core": "^3.6.0",
         "jasmine-reporters": "^2.3.2",
         "jasmine-spec-reporter": "^6.0.0",
