--- a/chart/power/values-staging.yaml
+++ b/chart/power/values-staging.yaml
@@ -85,12 +85,13 @@ affinity: {}
 
 config:
   modules:
+    - "immobilienpreisindex"
     - "bodenrichtwerte"
     - "bodenwertkalkulator"
-    - "immobilienpreisindex"
+    - "forms"
     - "immobilienpreiskalkulator"
     - "grundstuecksmarktdaten"
-    - "forms"
     - "feedback"
     - "login"
+    - "logout"
   authentication: true
