Changed modules for prod

--- a/chart/power/values-prod.yaml
+++ b/chart/power/values-prod.yaml
@@ -87,6 +87,8 @@ config:
   modules:
     - "immobilienpreisindex"
     - "bodenrichtwerte"
+    - "bodenwertkalkulator"
     - "immobilienpreiskalkulator"
     - "grundstuecksmarktdaten"
+    - "feedback"
   authentication: true
