Updated dependencies, startpage and vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,7 @@
     "eslint.format.enable": true,
     "eslint.workingDirectories": [
         "power"
-    ]
+    ],
+    "editor.detectIndentation": false,
+	"scssFormatter.singleQuote": true
 }
