Initial commit of new GMB-Module

--- a/power/src/assets/config/config.json
+++ b/power/src/assets/config/config.json
@@ -5,6 +5,7 @@
         "immobilienpreisindex",
         "immobilienpreiskalkulator",
         "grundstuecksmarktdaten",
+	"gmb",
         "forms",
         "feedback",
         "login"
